@@ -412,6 +412,7 @@ dnl GNU regex lib if you have regcomp in libc you should NOT have this lib too
 dnl ######################################################################
 
 AC_CHECK_LIB(rx, main)
+AC_CHECK_LIB(rt, main)
 
 dnl ######################################################################
 dnl Checks for header files.
