@@ -1,4 +1,4 @@
-@set UPDATED 23 June 2007
-@set UPDATED-MONTH June 2007
-@set EDITION 2.2.1
-@set VERSION 2.2.1
+@set UPDATED 17 July 2007
+@set UPDATED-MONTH July 2007
+@set EDITION 2.2.2a1
+@set VERSION 2.2.2a1
