@@ -278,6 +278,7 @@ extern int errno;
 #define true  1
 #define false 0
 #define CF_BUFSIZE 4096
+#define CF_BILLION 1000000000L
 #define CF_EXPANDSIZE (2*CF_BUFSIZE)
 #define CF_ALLCLASSSIZE (4*CF_BUFSIZE)
 #define CF_BUFFERMARGIN 32
