@@ -411,13 +411,11 @@ for (j = 0,len = 0,ifp = list.ifc_req; len < list.ifc_len; len+=SIZEOF_IFREQ(*if
          AddClassToHeap(CanonifyName(ip));
          
             
-         /* New style */
+         /* New style classes */
          strcpy(ip,"ipv4_");
          strcat(ip,inet_ntoa(sin->sin_addr));
          AddClassToHeap(CanonifyName(ip));
-         snprintf(name,CF_MAXVARSIZE-1,"ipv4[%s]",CanonifyName(ifp->ifr_name));
-         AddMacroValue(CONTEXTID,name,inet_ntoa(sin->sin_addr));
-         
+
          for (sp = ip+strlen(ip)-1; (sp > ip); sp--)
             {
             if (*sp == '.')
@@ -426,7 +424,24 @@ for (j = 0,len = 0,ifp = list.ifc_req; len < list.ifc_len; len+=SIZEOF_IFREQ(*if
                AddClassToHeap(CanonifyName(ip));
                }
             }
+
+         /* Matching variables */
+
+         strcpy(ip,inet_ntoa(sin->sin_addr));
+         snprintf(name,CF_MAXVARSIZE-1,"ipv4[%s]",CanonifyName(ifp->ifr_name));
+         AddMacroValue(CONTEXTID,name,ip);
+
+         i = 3;
          
+         for (sp = ip+strlen(ip)-1; (sp > ip); sp--)
+            {
+            if (*sp == '.')
+               {
+               *sp = '\0';
+               snprintf(name,CF_MAXVARSIZE-1,"ipv4_%d[%s]",i--,CanonifyName(ifp->ifr_name));
+               AddMacroValue(CONTEXTID,name,ip);
+               }
+            }         
          }
       }
    }
